--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -118,7 +118,7 @@
 
 @manual{sage,
   Key          = {Sage},
-  Author       = {W.\thinspace{}A. Stein and others},
+  Author       = {Stein, W. A. and others},
   Organization = {The Sage Development Team},
   Title        = {{S}age {M}athematics {S}oftware ({V}ersion 6.1.1)},
   note         = {\url{http://www.sagemath.org}},
@@ -126,7 +126,7 @@
 }
 
 @article{magma,
-    AUTHOR = {Bosma, Wieb and Cannon, John and Playoust, Catherine},
+    AUTHOR = {Bosma, W. and Cannon, J. and Playoust, C.},
      TITLE = {The {M}agma algebra system. {I}. {T}he user language},
       NOTE = {Computational algebra and number theory (London, 1993)},
    JOURNAL = {J. Symbolic Comput.},
@@ -153,14 +153,14 @@
   issn = "0022-314X",
   doi = "http://dx.doi.org/10.1016/j.jnt.2010.01.017",
   url = "http://www.sciencedirect.com/science/article/pii/S0022314X10000727",
-  author = "Clément Pernet and William Stein",
+  author = "Pernet, C. and Stein, W.",
   keywords = "Hermite normal form",
   keywords = "Exact linear algebra "
 }
 
 @book{silvermanrational,
   title={Rational Points on Elliptic Curves},
-  author={Silverman, J.H. and Tate, J.},
+  author={Silverman, J. H. and Tate, J.},
   isbn={9780387978253},
   lccn={92004669},
   series={Springer Undergraduate Texts in Mathematics and Technology},
@@ -171,7 +171,7 @@
 
 @book{silvermanarithmetic,
   title={The Arithmetic of Elliptic Curves},
-  author={Silverman, J.H.},
+  author={Silverman, J. H.},
   publisher={Springer},
   year={1991},
   series={Graduate Texts in Mathematics},
@@ -188,7 +188,7 @@
   issn = "0021-8693",
   doi = "http://dx.doi.org/10.1016/j.jalgebra.2005.04.013",
   url = "http://www.sciencedirect.com/science/article/pii/S0021869305002498",
-  author = "Jürgen Klüners and Sebastian Pauli"
+  author = "Klüners, J. and Pauli, S."
 }
 
 @book{narkiewicz,
@@ -219,11 +219,22 @@
 
 @book{cassels,
   title={Lectures on Elliptic Curves},
-  author={Cassels, J.W.S.},
+  author={Cassels, J. W. S.},
   isbn={9780521425308},
   lccn={92160903},
   series={London Mathematical Society Student Texts},
   url={http://books.google.co.uk/books?id=zgqUAuEJNJ4C},
   year={1991},
   publisher={Cambridge University Press}
+}
+
+@book{gaal,
+  title={Diophantine Equations and Power Integral Bases: New Computational Methods},
+  author={Ga{\'a}l, I.},
+  isbn={9780817642716},
+  lccn={2002025353},
+  series={Diophantine Equations and Power Integral Bases: New Computational Methods},
+  url={http://books.google.co.uk/books?id=ubXq2P-AOJIC},
+  year={2002},
+  publisher={Birkh{\"a}user Boston}
 }
