--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -238,3 +238,13 @@
   year={2002},
   publisher={Birkh{\"a}user Boston}
 }
+
+@book{schertz,
+  title={Complex Multiplication},
+  author={Schertz, R.},
+  isbn={9781139486835},
+  series={New Mathematical Monographs},
+  url={http://books.google.co.uk/books?id=mE\_EIma4iUcC},
+  year={2010},
+  publisher={Cambridge University Press}
+}
